--- a/app/index.html
+++ b/app/index.html
@@ -158,6 +158,8 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/directives/mydirective.js"></script>
+        <script src="scripts/services/config.js"></script>
         <!-- endbuild -->
 
     <script src="assets/plugins/jquery/jquery.min.js"></script>
